--- a/_all-courses/ma302.md
+++ b/_all-courses/ma302.md
@@ -1,30 +1,29 @@
 ---
-
-
 code: MA 302
-title: Advanced Calculus
+title: Mechanics
 books:
-  - author: Rudin, W.
-    title: Principles of Mathematical Analysis
-    publ: McGraw-Hill, 1986
-  - author:  Apostol, T. M.
-    title: Mathematical Analysis
-    publ: Narosa Publishing House, New Delhi, 1992
-  - author:  Spivak, M.
-    title: Calculus on Manifolds
-    publ: The Benjamin Publishing Company, New York, 1965
-  - author:  Munkres, J., R.
-    title: Analysis on Manifolds
-    publ: Addison-Wesley Publishing Company, 1991
-prereq-courses: 
-ug-prereq-courses: 
+  - author: Ralph Abraham and Jerrold E. Marsden
+    title: Foundations of mechanics
+    publ: Benjamin/Cummings Publishing Co., Inc., Advanced Book Program, Reading, Mass., 1978
+
+  - author: Vladimir I. Arnol’d
+    title: Mathematical methods of classical mechanics
+    publ: Graduate Texts in Mathematics, vol. 60, Springer-Verlag, New York, 1989
+
+
+  - author: Ana Cannas da Silva
+    title: Lectures on symplectic geometry
+    publ: Lecture Notes in Mathematics, vol. 1764, Springer-Verlag, Berlin, 2001
+
+
+  - author: Jerrold E. Marsden and Tudor S. Ratiu
+    title: Introduction to mechanics and symmetry, second ed.
+    publ: Texts in Applied Mathematics, vol. 17, Springer-Verlag, New York, 1999
+
+prereqs: 
+  - Calculus on manifolds
+  - rudiments of Lie theory (the equivalent of Chapter 1, Chapter 2, and Section 4.1 of "Foundations of mechanics" by Abraham and Marsden).
 ---
+This is an introductory course on the foundations of mechanics, focusing mainly on classical mechanics. The laws of classical mechanics are most simply expressed and studied in the language of symplectic geometry. This course can also be viewed as an introduction to symplectic geometry. The role of symmetry in studying mechanical systems will be emphasized.
 
-
-
-Differentiation:Basic definitions and theorems, Partial derivatives,
-Derivatives (as linear maps), Inverse and Implicit function theorems.
-Integration:Basic definitions and theorems, Integrable functions, Partitions of
-unity, Change of variables.
-Manifolds:Basic definitions, forms on manifolds, Stokes theorem on manifolds,
-Volume element, classical theorems (Green's and divergence).
+The core syllabus will consist of Lagrangian mechanics, Hamiltonian mechanics, Hamilton-Jacobi theory, moment maps and symplectic reduction. Additional topics will be drawn from integrable systems, quantum mechanics, hydrodynamics and classical field theory.
