algebra courses update

--- a/_all-courses/ma212.md
+++ b/_all-courses/ma212.md
@@ -20,23 +20,30 @@ ug-prereq-courses: UM 203
 
 
 
-Part A
+#### Part A: Group theory
 
-* Groups: definitions & basic examples;
-* Normal subgroups, quotients;
-* Three isomorphism theorems;
-* Centralizer and normalizer of a subset, centre of a group;
-* Permutations, symmetrc groups and Cayley's theorem;
-* Group actions and their applications, Sylow's theorems.
+1. Basic definitions, examples
+2. Cyclic groups and its subgroups
+3. Homomorphisms, quotient groups, isomorphism theorems
+4. Group actions, Sylow’s theorems, simplicity of A_n for n≥5
+5. Direct and semi-direct products
+6. Solvable and nilpotent groups
+7. Free groups
 
-Part B
+#### Part B: Ring theory
 
-* Rings and ideals: basic definitions, quotient rings;
-* The Chinese Remainder Theorem;
-* Maximal and prime ideals;
-* Unique factorization, unique factorization domains, principal ideal domains,
-  Euclidean domains, polynomial rings;
-* Modules: basic definitions and examples, Hom and tensor products, the
-  Structure Theorem for finitely generated modules over PIDs;
-* Fields: basic definitions and examples, algebraic & trancendental numbers;
-* Finite fields, characteristic, the order of a finite field.
+1. Basic definitions, examples
+2. Ring homomorphisms, quotient rings, properties of ideals
+3. Localization, ring of fractions
+4. The Chinese remainder theorem
+5. Euclidean domains, principal ideal domains, unique factorization domains
+6. Polynomial rings over fields, irreducibility criteria
+
+#### Part C: Module theory
+
+1. Basic definitions and examples
+2. Homomorphisms and quotient modules
+3. Direct sums and free modules
+4. Tensor product of modules
+5. Structure theorem of modules over PID’s and consequences
+6. Noetherian rings and modules, Hilbert basis theorem
