--- a/_all-courses/ma213.md
+++ b/_all-courses/ma213.md
@@ -1,7 +1,4 @@
 ---
-
-
-
 title: Algebra II
 code: MA 213
 credits: "3:1"
@@ -22,20 +19,23 @@ prereq-courses: MA 212
 ug-prereq-courses: 
 ---
 
+#### Part A: Field theory
 
+1. Theory of symmetric polynomials – Newton's theorem
+2. Basic theory of field extensions
+3. Algebraic and transcendental extensions (and transcendence degree)
+4. Construction with straight edge and compass; Gauss-Wantzel theorem
+5. Algebraic closure – Steinitz’s theorem
+6. Splitting fields, normal extensions
+7. Separable extensions
+8. Finite fields: construction, subfields, Frobenius
+9. Primitive element theorem
+10. Dedekind-Artin linear independence of (semi)group characters
 
-Part A
+#### Part B: Galois theory
 
-* Introduction to categories and functors, direct and inverse limits;
-* Field of fractions of an integral domain, localization of rings;
-* I-adic completion of rings;
-* Tensor products, short exact sequences of modules;
-* Noetherian rings and modules, Hilbert Basis Theorem, Jordan-Holder Theorem;
-* Artinian rings, Artinian implies Noetherian, Krull-Schmidt Theorem.
-
-Part B
-
-* Splitting fields, normal and separable extensions;
-* Application to finite fields;
-* The Fundamental Theorem of Galois Theory;
-* The Primitive Element Theorem.
+1. Fundamental theorem of Galois theory (including Normal Basis Theorem)
+2. Composite extensions and Galois group
+3. Galois group of cyclotomic extensions, finite fields
+4. Galois groups of polynomials, Fundamental theorem of Algebra
+5. Solvable and radical extensions, insolvability of a quintic
