some algebra references

--- a/_all-courses/ma212.md
+++ b/_all-courses/ma212.md
@@ -8,17 +8,15 @@ books:
   - author: Dummit, D. S. and Foote, R. M.
     title: Abstract Algebra
     publ: McGraw-Hill, 1986      
-  - author: Herstein, I. N.
-    title: Topics in Algebra
-    publ: John Wiley & Sons, 1995
   - author: Lang, S.
     title: Algebra (3rd Ed.)
     publ: Springer, 2002
+  - title: Algebra
+    author: Hungerford
+    publ: Graduate Texts in Mathematics 73, Springer Verlag, 1974
 prereq-courses:
 ug-prereq-courses: UM 203
 ---
-
-
 
 #### Part A: Group theory
 
