--- a/_all-courses/ma213.md
+++ b/_all-courses/ma213.md
@@ -15,6 +15,15 @@ books:
   - author: Atiyah, M. and MacDonald, R.
     title: Introduction to Commutative Algebra
     publ: Addison-Wesley(or any reprint)
+  - title: Groups and Representations
+    author: Jonathan Alperin and Rowen Bell
+    publ: Graduate Texts in Mathematics 162, Springer Verlag, 1995
+  - title: Algebra
+    author: Hungerford
+    publ: Graduate Texts in Mathematics 73, Springer Verlag, 1974
+  - title: Artin, E.
+    author: Galois Theory
+    publ: University of Notre Dame Press, 1944
 prereq-courses: MA 212
 ug-prereq-courses: 
 ---
