--- a/_all-courses/ma212.md
+++ b/_all-courses/ma212.md
@@ -14,6 +14,12 @@ books:
   - title: Algebra
     author: Hungerford
     publ: Graduate Texts in Mathematics 73, Springer Verlag, 1974
+  - title: Basic Algebra I & II
+    author: Nathan Jacobson
+    publ: Dover, 2009
+  - title: Lectures in Abstract Algebra I, II & III
+    author: Nathan Jacobson
+    publ: Graduate Text in Mathematics, Springer Verlag, 1951 
 prereq-courses:
 ug-prereq-courses: UM 203
 ---
