--- a/_all-courses/ma213.md
+++ b/_all-courses/ma213.md
@@ -12,9 +12,6 @@ books:
   - author: Lang, S.
     title: Algebra (3rd Ed.)
     publ: Springer, 2002
-  - author: Atiyah, M. and MacDonald, R.
-    title: Introduction to Commutative Algebra
-    publ: Addison-Wesley(or any reprint)
   - title: Groups and Representations
     author: Jonathan Alperin and Rowen Bell
     publ: Graduate Texts in Mathematics 162, Springer Verlag, 1995
@@ -24,6 +21,12 @@ books:
   - title: Artin, E.
     author: Galois Theory
     publ: University of Notre Dame Press, 1944
+  - title: Basic Algebra I & II
+    author: Nathan Jacobson
+    publ: Dover, 2009
+  - title: Lectures in Abstract Algebra I, II & III
+    author: Nathan Jacobson
+    publ: Graduate Text in Mathematics, Springer Verlag, 1951 
 prereq-courses: MA 212
 ug-prereq-courses: 
 ---
