dynamical systems corrections

--- a/_all-courses/ma277.md
+++ b/_all-courses/ma277.md
@@ -1,6 +1,4 @@
 ---
-
-
 code: MA 277
 title: Nonlinear Dynamical Systems and Chaos
 books:
@@ -10,6 +8,12 @@ books:
   - author:  Guckenheimer, J. and Holmes, P.
     title: Nonlinear Oscillations, Dynamical Systems and bifurcations of vector fields
     publ: Springer-Verlag, 1983
+  - author: L. Ya. Adrianova
+    title: Introduction to Linear Systems of Differential Equations
+    publ: AMS 1995
+  - author: Morris W. Hirsch, Robert L. Devaney, Stephen Smale
+    title: Differential Equations, Dynamical Systems, and Linear Algebra
+    publ: Academic Press 2012
 prereq-courses: 
 ug-prereq-courses: 
 ---
