correct dynamical systems course

--- a/_all-courses/ma278.md
+++ b/_all-courses/ma278.md
@@ -1,6 +1,4 @@
 ---
-
-
 title: Introduction to Dynamical Systems Theory
 code: MA 278
 books:
@@ -16,6 +14,13 @@ books:
   - author: M.Tabor
     title: Chaos and Integrability in Non-linear Dynamics
     publ: 1989
+  - author: L. Ya. Adrianova
+    title: Introduction to Linear Systems of Differential Equations
+    publ: AMS 1995
+  - author: Morris W. Hirsch, Robert L. Devaney, Stephen Smale
+    title: Differential Equations, Dynamical Systems, and Linear Algebra
+    publ: Academic Press 2012
+prereq-courses: 
 prereq-courses:
 ug-prereq-courses:
 ---
