--- a/_all-courses/ma314.md
+++ b/_all-courses/ma314.md
@@ -1,31 +1,23 @@
 ---
-
-
-title: Introduction to Algebraic Geometry
 code: MA 314
+title: Topics in Commutative Algebra
 books:
-- author:  Shafarevich, I.R.
-  title: Basic Algebraic Geometry 1, 2nd edition
-  publ: Springer-Verlag, 1994
-- author:  Smith, K., Kahanpaa, L., Kekalainen, P., Traves, W.
-  title: An Invitation to Algebraic Geometry
-  publ: Springer-Verlag, 2000
-- author:  Reid, M.
-  title: Undergraduate Algebraic Geometry
-  publ: London Mathematical Society Student Texts 12, Cambridge University Press, 1988
-- author:  Fulton, W.
-  title: Algebraic Curves (http://math.lsa.umich.edu/CurveBook.pdf)
-- author:  Holme, A.
-  title: A Royal Road to Algebraic Geometry
-  publ: Springer,2012
+  - author: T. Becker and V. Weispfenning
+    title: Grobner Bases–a Computational Approach to Commutative Algebra
+    publ: Springer 1993
+  - author: W.W. Adams and P. Loustaunau
+    title: An Introduction to Grobner Bases
+    publ: Graduate Studies in Mathematics, Vol. 3, American Mathematical Society, 1994
+  - author: B. Sturmfels
+    title: Grobner bases and convex polytopes
+    publ: American Mathematical Society 1996
 prereq-courses: 
 ug-prereq-courses: 
 ---
 
 
-Affine algebraic sets, Hilbert basis theorem, Hilbert Nullstellensatz, function
-field, plane curves, Bezout's theorem, product, normality, morohisms, Noether
-normalisation,
-Graded rings, projective varieties, rational functions, tangent spaces, non-
-singularity, blowing up points, Riemann-Roch for curves.
-Schemes examples.
+
+Abstract relations and Dickson’s Lemma; Hilbert Basis theorem, Buchberger Criterion for
+Grobner Bases and Elimination Theorem; Field Extensions and the Hilbert Nullstellensatz;
+Decomposition, Radical, and Zeroes of Ideals; Syzygies, Grobner Bases for Modules, Computation
+of Hom, Free Resolutions; Universal Grobner Bases and Toric Ideals.
