--- a/_all-courses/ma302.md
+++ b/_all-courses/ma302.md
@@ -21,8 +21,7 @@ books:
     publ: Texts in Applied Mathematics, vol. 17, Springer-Verlag, New York, 1999
 
 prereqs: 
-  - Calculus on manifolds
-  - rudiments of Lie theory (the equivalent of Chapter 1, Chapter 2, and Section 4.1 of "Foundations of mechanics" by Abraham and Marsden).
+  - Calculus on manifolds, rudiments of Lie theory (the equivalent of Chapter 1, Chapter 2, and Section 4.1 of "Foundations of mechanics" by Abraham and Marsden).
 ---
 This is an introductory course on the foundations of mechanics, focusing mainly on classical mechanics. The laws of classical mechanics are most simply expressed and studied in the language of symplectic geometry. This course can also be viewed as an introduction to symplectic geometry. The role of symmetry in studying mechanical systems will be emphasized.
 
