Added course description

--- a/_all-courses/ma290.md
+++ b/_all-courses/ma290.md
@@ -5,3 +5,7 @@ credits: "6:0"
 prereq-courses: 
 ug-prereq-courses: 
 ---
+
+
+
+ Optional project for undergraduate mathematics majors in their fifth year, first semester.
