--- a/_all-courses/ma291.md
+++ b/_all-courses/ma291.md
@@ -5,3 +5,6 @@ credits: "6:0"
 prereq-courses: 
 ug-prereq-courses: 
 ---
+
+
+Optional project for undergraduate mathematics majors in their fifth year, second semester.
