--- a/_all-courses/ma219.md
+++ b/_all-courses/ma219.md
@@ -25,12 +25,12 @@ Vector spaces: Definition, Basis and dimension, Direct sums.
 Linear transformations: Definition, Rank-nullity theorem, Algebra of linear
 transformations, Dual spaces, Matrices.
 
-Systems of linear equations:elementary theory of determinants, Cramer's rule.
+Systems of linear equations: Elementary theory of determinants, Cramer's rule.
 Eigenvalues and eigenvectors, the characteristic polynomial, the Cayley-
 Hamilton Theorem, the minimal polynomial, algebraic and geometric
 multiplicities, Diagonalization, The Jordan canonical form.
 Symmetry: Group of motions of the plane, Discrete groups of motion, Finite
-groups of S0(3).
+groups of SO(3).
 Bilinear forms: Symmetric, skew symmetric and Hermitian forms, Sylvester’s law
 of inertia, Spectral theorem for the Hermitian and normal operators on finite
 dimensional vector spaces.
