--- a/_all-courses/ma200.md
+++ b/_all-courses/ma200.md
@@ -22,5 +22,5 @@ ug-prereq-courses: UM 204
 
 
 
-Functions on $R^n$ , directional derivatives, total derivative, higher order derivatives and Taylor series.The inverse and implicit function theorem,
-Integration on $R^n$ , differential forms on  $R^n$ , closed and exact forms. Green’s theorem, Stokes’ theorem and the Divergence theorem.
+Functions on `$\R^n$` , directional derivatives, total derivative, higher order derivatives and Taylor series.The inverse and implicit function theorem,
+Integration on `$\R^n$` , differential forms on  `$\R^n$` , closed and exact forms. Green’s theorem, Stokes’ theorem and the Divergence theorem.
