--- a/_all-courses/ma387.md
+++ b/_all-courses/ma387.md
@@ -1,4 +1,17 @@
 ---
-title: Topics in Representation Theory
+title: Representation theory of affine Lie algebras
 code: MA 387
+books:
+  - author: Carter, R. W. 
+    title: Lie algebras of finite and affine type
+    publ: Cambridge Studies in Advanced Mathematics, 96. Cambridge University Press, Cambridge, 2005
+  - author: Kac, Victor G. 
+    title: Infinite-dimensional Lie algebras. Third edition
+    publ: Cambridge University Press, Cambridge, 1990
+  - author: Wakimoto, Minoru
+    title: Lectures on infinite-dimensional Lie algebra
+    publ: World Scientific Publishing Co., Inc., River Edge, NJ, 2001
+prereq-courses: "MA 219: Linear Algebra, MA 212: Algebra I, MA 213: Algebra II, MA 315: Lie Algebras and their Representations"
 ---
+
+Loop algebras, central extensions, untwisted affine Lie algebras, root systems, and Weyl groups of untwisted affine Lie algebras. Graph automorphisms of untwisted affine Lie algebras, twisted affine Lie algebras, root systems and Weyl groups of twisted affine Lie algebras. Representations of affine Lie algebras, weight space decomposition, the Category O, Verma modules, integrable modules in Category O. The generalized Casimir operator, Weyl-Kac Character formula, Weyl-Kac denominator identities and Macdonald identities.
