Updated ma387 course

--- a/_all-courses/ma387.md
+++ b/_all-courses/ma387.md
@@ -11,7 +11,7 @@ books:
   - author: Wakimoto, Minoru
     title: Lectures on infinite-dimensional Lie algebra
     publ: World Scientific Publishing Co., Inc., River Edge, NJ, 2001
-prereq-courses: "MA 219: Linear Algebra, MA 212: Algebra I, MA 213: Algebra II, MA 315: Lie Algebras and their Representations"
+prereq-courses: "MA 219, MA 212, MA 213, MA 315"
 ---
 
 Loop algebras, central extensions, untwisted affine Lie algebras, root systems, and Weyl groups of untwisted affine Lie algebras. Graph automorphisms of untwisted affine Lie algebras, twisted affine Lie algebras, root systems and Weyl groups of twisted affine Lie algebras. Representations of affine Lie algebras, weight space decomposition, the Category O, Verma modules, integrable modules in Category O. The generalized Casimir operator, Weyl-Kac Character formula, Weyl-Kac denominator identities and Macdonald identities.
