--- a/_all-courses/ma224.md
+++ b/_all-courses/ma224.md
@@ -1,7 +1,4 @@
 ---
-
-
-
 title: Complex Analysis
 code: MA 224
 credits: "3:1"
@@ -13,7 +10,7 @@ books:
     title: Functions of One Complex Variable
     publ: Springer-veriag, 1978
 prereq-courses: MA 221
-ug-prereq-courses: 
+ug-prereq-courses: UM 204
 ---
 
 
