um 204 as prerequisite

--- a/_all-courses/ma222.md
+++ b/_all-courses/ma222.md
@@ -16,7 +16,7 @@ books:
     title: Real and Abstract Analysis
     publ: Springer, 1969
 prereq-courses: MA 221
-ug-prereq-courses: 
+ug-prereq-courses: UM 204
 ---
 
 
