--- a/_all-courses/ma241.md
+++ b/_all-courses/ma241.md
@@ -16,7 +16,7 @@ books:
     title: Differential Equations and Dynamical Systems
     publ: Springer-Verlag, 1991
 prereq-courses: MA 221
-ug-prereq-courses: 
+ug-prereq-courses: UM 204
 ---
 
 
