publications updated, old course cleaned

--- a/_all-courses/um203.md
+++ b/_all-courses/um203.md
@@ -1,19 +1,10 @@
 ---
 code: UM 203
-title: Introduction to algebraic structures
+title: Elementary Algebra and Number Theory
 credits: "3:1"
 books:
-  - author: L. Childs
-    title: A Concrete Introduction to Higher Algebra, 3rd edition
-    publ: Springer-Verlag
-  - author: M. A. Armstrong
-    title: Groups and Symmetry
-    publ: Springer-Verlag
-  - author: Miklos Bona
-    title: "A Walk Through Combinatorics: An Introduction to Enumeration and Graph Theory"
-    publ: World Scientific
-  - title: Elementary Number Theory
-    author: D. M. Burton.
+  - author: Burton, D. M.
+    title: Elementary Number Theory
     publ: McGraw Hill
   - author: Niven, Zuckerman, H. S. and Montgomery, H. L.
     title: An Introduction to the Theory of Numbers, 5th edition
@@ -22,17 +13,15 @@ books:
     title: A First Course in Abstract Algebra, 7th edition
     publ: Pearson
 ---
+__Note:__ This course has been replaced by [UM 205](um205.html).
 
-1. Set theory: equivalence classes, partitions, posets, axiom of choice/Zorn’s
-lemma, countable and uncountable sets.
-2. Combinatorics: induction, pigeonhole principle, inclusion-exclusion,
-Möbius inversion formula, recurrence relations.
-3. Number theory: Divisibility and Euclids algorithm, Pythagorean
-triples, solving cubics, Infinitude of primes, arithmetic functions, Fun-
-damental theorem of arithmetic, Congruences, Fermat’s little theorem
-and Euler’s theorem, ring of integers modulo n, factorisation of poly-
-nomials, algebraic and transcendental numbers.
-4. Graph theory: Basic definitions, trees, Eulerian tours, matchings,
-matrices associated to graphs.
-5. Algebra: groups, permutations, group actions, Cayley’s theorem, di-
-hedral groups, introduction to rings and fields.
+Divisibility and Euclid’s algorithm; Fundamental theorem of arithmetic; Infinitude of primes;
+Congruences; (Reduced) residue systems, Application to sums of squares; Chinese Remainder Theorem;
+Solutions of polynomial congruences, Hensel’s lemma; A few arithmetic functions (in particular, discussion
+of the floor function); the Mobius inversion formula; Recurrence relations; Basic combinatorial number
+theory (pigeonhole principle, inclusion-exclusion, etc.); Primitive roots and power residues, Quadratic
+residues and the quadratic reciprocity law, the Jacobi symbol; Some Diophantine equations, Pythagorean
+triples, Fermat’s descent, examples; Definitions of groups, rings and fields, motivations, examples and basic
+properties; polynomial rings over fields, factorisation of polynomials, content of a polynomial and Gauss’
+lemma, Eisenstein’s irreducibility criterion; Elementary symmetric polynomials, the fundamental theorem
+on Symmetric polynomials; Algebraic and transcendental numbers (an introduction).
