--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,325 @@
+@article {MR4192234,
+    AUTHOR = {Choudhury, Projesh Nath and Eagambaram, N. and Sivakumar, K.
+              C. and Sushmitha, P.},
+     TITLE = {On the matrix class {$Q_0$} and inverse monotonicity
+              properties of bordered matrices},
+   JOURNAL = {Linear Algebra Appl.},
+  FJOURNAL = {Linear Algebra and its Applications},
+    VOLUME = {612},
+      YEAR = {2021},
+     PAGES = {206--222},
+      ISSN = {0024-3795},
+   MRCLASS = {15B48 (90C33)},
+  MRNUMBER = {4192234},
+       DOI = {10.1016/j.laa.2020.10.041},
+       URL = {https://doi.org/10.1016/j.laa.2020.10.041},
+}
+		
+@article {MR4190639,
+    AUTHOR = {Manna, Ramesh and Shrivastava, Saurabh and Shuin, Kalachand},
+     TITLE = {Weighted estimates for maximal functions associated with
+              finite type curves in {$\Bbb R^2$}},
+   JOURNAL = {Nonlinear Anal.},
+  FJOURNAL = {Nonlinear Analysis. Theory, Methods \& Applications. An
+              International Multidisciplinary Journal},
+    VOLUME = {205},
+      YEAR = {2021},
+     PAGES = {112225, 24},
+      ISSN = {0362-546X},
+   MRCLASS = {42B25 (42B15 42B37)},
+  MRNUMBER = {4190639},
+       DOI = {10.1016/j.na.2020.112225},
+       URL = {https://doi.org/10.1016/j.na.2020.112225},
+}
+		
+@article {MR4185068,
+    AUTHOR = {Ghosh, Mrinal Kanti and Pradhan, Somnath},
+     TITLE = {Zero-sum risk-sensitive stochastic differential games with
+              reflecting diffusions in the orthant},
+   JOURNAL = {ESAIM Control Optim. Calc. Var.},
+  FJOURNAL = {ESAIM. Control, Optimisation and Calculus of Variations},
+    VOLUME = {26},
+      YEAR = {2020},
+     PAGES = {Paper No. 114, 33},
+      ISSN = {1292-8119},
+   MRCLASS = {91A15 (49K45 49N70 91A23)},
+  MRNUMBER = {4185068},
+       DOI = {10.1051/cocv/2020029},
+       URL = {https://doi.org/10.1051/cocv/2020029},
+}
+		
+@article {MR4182797,
+    AUTHOR = {Biswas, Indranil and Pingali, Vamsi Pritham},
+     TITLE = {Metric properties of parabolic ample bundles},
+   JOURNAL = {Int. Math. Res. Not. IMRN},
+  FJOURNAL = {International Mathematics Research Notices. IMRN},
+      YEAR = {2020},
+    NUMBER = {23},
+     PAGES = {9336--9369},
+      ISSN = {1073-7928},
+   MRCLASS = {53C55 (14D20 32L05)},
+  MRNUMBER = {4182797},
+       DOI = {10.1093/imrn/rny259},
+       URL = {https://doi.org/10.1093/imrn/rny259},
+}
+		
+@article {MR4181695,
+    AUTHOR = {Sen, Jeet and Sain, Debmalya and Paul, Kallol},
+     TITLE = {Orthogonality and norm attainment of operators in
+              semi-{H}ilbertian spaces},
+   JOURNAL = {Ann. Funct. Anal.},
+  FJOURNAL = {Annals of Functional Analysis},
+    VOLUME = {12},
+      YEAR = {2021},
+    NUMBER = {1},
+     PAGES = {Paper No. 17, 12},
+      ISSN = {2639-7390},
+   MRCLASS = {47C05 (46B03 47A30 47B65 47L05)},
+  MRNUMBER = {4181695},
+       DOI = {10.1007/s43034-020-00104-7},
+       URL = {https://doi.org/10.1007/s43034-020-00104-7},
+}
+		
+@article {MR4180253,
+    AUTHOR = {Addario-Berry, Louigi and Bhamidi, Shankar and Sen, Sanchayan},
+     TITLE = {A probabilistic approach to the leader problem in random
+              graphs},
+   JOURNAL = {Random Structures Algorithms},
+  FJOURNAL = {Random Structures \& Algorithms},
+    VOLUME = {58},
+      YEAR = {2021},
+    NUMBER = {1},
+     PAGES = {34--67},
+      ISSN = {1042-9832},
+   MRCLASS = {60F05 (05C80 60J05 60J90)},
+  MRNUMBER = {4180253},
+       DOI = {10.1002/rsa.20966},
+       URL = {https://doi.org/10.1002/rsa.20966},
+}
+		
+@article {MR4174796,
+    AUTHOR = {Khurana, Divya and Roy, Saikat and Sain, Debmalya},
+     TITLE = {Symmetric points in spaces of linear operators between
+              {B}anach spaces},
+   JOURNAL = {Acta Sci. Math. (Szeged)},
+  FJOURNAL = {Acta Universitatis Szegediensis. Acta Scientiarum
+              Mathematicarum},
+    VOLUME = {86},
+      YEAR = {2020},
+    NUMBER = {3-4},
+     PAGES = {617--634},
+      ISSN = {0001-6969},
+   MRCLASS = {46B20 (47B01 47L05)},
+  MRNUMBER = {4174796},
+       DOI = {10.14232/actasm-020-420-6},
+       URL = {https://doi.org/10.14232/actasm-020-420-6},
+}
+		
+@article {MR4174787,
+    AUTHOR = {Chattopadhyay, Arup and Sain, Debmalya and Senapati, Tanusri},
+     TITLE = {A study of non-positive operators between real normed linear
+              spaces},
+   JOURNAL = {Acta Sci. Math. (Szeged)},
+  FJOURNAL = {Acta Universitatis Szegediensis. Acta Scientiarum
+              Mathematicarum},
+    VOLUME = {86},
+      YEAR = {2020},
+    NUMBER = {3-4},
+     PAGES = {449--466},
+      ISSN = {0001-6969},
+   MRCLASS = {47L05 (46B20)},
+  MRNUMBER = {4174787},
+       DOI = {10.14232/actasm-019-554-z},
+       URL = {https://doi.org/10.14232/actasm-019-554-z},
+}
+		
+@article {MR4174291,
+    AUTHOR = {Datar, Ved V. and Pingali, Vamsi Pritham},
+     TITLE = {On coupled constant scalar curvature {K}\"{a}hler metrics},
+   JOURNAL = {J. Symplectic Geom.},
+  FJOURNAL = {The Journal of Symplectic Geometry},
+    VOLUME = {18},
+      YEAR = {2020},
+    NUMBER = {4},
+     PAGES = {961--994},
+      ISSN = {1527-5256},
+   MRCLASS = {53C55 (53C25 53D20)},
+  MRNUMBER = {4174291},
+       DOI = {10.4310/JSG.2020.v18.n4.a1},
+       URL = {https://doi.org/10.4310/JSG.2020.v18.n4.a1},
+}
+		
+@article {MR4171239,
+    AUTHOR = {Sain, Debmalya and Paul, Kallol and Mal, Arpita and Ray,
+              Anubhab},
+     TITLE = {A complete characterization of smoothness in the space of
+              bounded linear operators},
+   JOURNAL = {Linear Multilinear Algebra},
+  FJOURNAL = {Linear and Multilinear Algebra},
+    VOLUME = {68},
+      YEAR = {2020},
+    NUMBER = {12},
+     PAGES = {2484--2494},
+      ISSN = {0308-1087},
+   MRCLASS = {46B20 (47L05)},
+  MRNUMBER = {4171239},
+       DOI = {10.1080/03081087.2019.1586824},
+       URL = {https://doi.org/10.1080/03081087.2019.1586824},
+}
+		
+@article {MR4170795,
+    AUTHOR = {Ganguly, Pritam and Thangavelu, Sundaram},
+     TITLE = {On the lacunary spherical maximal function on the {H}eisenberg
+              group},
+   JOURNAL = {J. Funct. Anal.},
+  FJOURNAL = {Journal of Functional Analysis},
+    VOLUME = {280},
+      YEAR = {2021},
+    NUMBER = {3},
+     PAGES = {108832, 32},
+      ISSN = {0022-1236},
+   MRCLASS = {43A80 (22E25 22E30 42B15 42B25)},
+  MRNUMBER = {4170795},
+       DOI = {10.1016/j.jfa.2020.108832},
+       URL = {https://doi.org/10.1016/j.jfa.2020.108832},
+}
+		
+@article {MR4166508,
+    AUTHOR = {Balakumar, G. P. and Borah, Diganta and Mahajan, Prachi and
+              Verma, Kaushal},
+     TITLE = {Further remarks on the higher dimensional {S}uita conjecture},
+   JOURNAL = {Ann. Polon. Math.},
+  FJOURNAL = {Annales Polonici Mathematici},
+    VOLUME = {125},
+      YEAR = {2020},
+    NUMBER = {2},
+     PAGES = {101--115},
+      ISSN = {0066-2216},
+   MRCLASS = {32F45 (32A25 32Q02)},
+  MRNUMBER = {4166508},
+       DOI = {10.4064/ap200203-21-4},
+       URL = {https://doi.org/10.4064/ap200203-21-4},
+}
+		
+@article {MR4166184,
+    AUTHOR = {Ghosh, Subhajit},
+     TITLE = {Total variation cutoff for the transpose top-2 with random
+              shuffle},
+   JOURNAL = {J. Theoret. Probab.},
+  FJOURNAL = {Journal of Theoretical Probability},
+    VOLUME = {33},
+      YEAR = {2020},
+    NUMBER = {4},
+     PAGES = {1832--1854},
+      ISSN = {0894-9840},
+   MRCLASS = {60J10 (60B15 60C05)},
+  MRNUMBER = {4166184},
+       DOI = {10.1007/s10959-019-00945-6},
+       URL = {https://doi.org/10.1007/s10959-019-00945-6},
+}
+		
+@article {MR4164608,
+    AUTHOR = {Khare, Apoorva and Rajaratnam, Bala},
+     TITLE = {Differential calculus on the space of countable labelled
+              graphs},
+   JOURNAL = {Adv. Oper. Theory},
+  FJOURNAL = {Advances in Operator Theory},
+    VOLUME = {6},
+      YEAR = {2021},
+    NUMBER = {1},
+     PAGES = {Paper No. 12, 28},
+      ISSN = {2662-2009},
+   MRCLASS = {05C63 (28C10)},
+  MRNUMBER = {4164608},
+       DOI = {10.1007/s43036-020-00111-4},
+       URL = {https://doi.org/10.1007/s43036-020-00111-4},
+}
+		
+@article {MR4163643,
+    AUTHOR = {Barbosa, Ezequiel and Santana, Farley and Upadhyay, Abhitosh},
+     TITLE = {On stable {CMC} free-boundary surfaces in a strictly convex
+              domain of a bi-invariant {L}ie group},
+   JOURNAL = {Internat. J. Math.},
+  FJOURNAL = {International Journal of Mathematics},
+    VOLUME = {31},
+      YEAR = {2020},
+    NUMBER = {11},
+     PAGES = {2050086, 9},
+      ISSN = {0129-167X},
+   MRCLASS = {53A10 (49Q05 49Q10 49Q20 53C42)},
+  MRNUMBER = {4163643},
+       DOI = {10.1142/S0129167X2050086X},
+       URL = {https://doi.org/10.1142/S0129167X2050086X},
+}
+		
+@article {MR4163506,
+    AUTHOR = {Bhatia, Manan},
+     TITLE = {Moderate deviation and exit time estimates for stationary last
+              passage percolation},
+   JOURNAL = {J. Stat. Phys.},
+  FJOURNAL = {Journal of Statistical Physics},
+    VOLUME = {181},
+      YEAR = {2020},
+    NUMBER = {4},
+     PAGES = {1410--1432},
+      ISSN = {0022-4715},
+   MRCLASS = {60K35 (60F99 82C43)},
+  MRNUMBER = {4163506},
+       DOI = {10.1007/s10955-020-02632-x},
+       URL = {https://doi.org/10.1007/s10955-020-02632-x},
+}
+		
+@article {MR4163424,
+    AUTHOR = {Bera, Sudip and Mukherjee, Sajal Kumar},
+     TITLE = {Generalized power sum and {N}ewton-{G}irard identities},
+   JOURNAL = {Graphs Combin.},
+  FJOURNAL = {Graphs and Combinatorics},
+    VOLUME = {36},
+      YEAR = {2020},
+    NUMBER = {6},
+     PAGES = {1957--1964},
+      ISSN = {0911-0119},
+   MRCLASS = {05A19 (05A05 05C30 05C38)},
+  MRNUMBER = {4163424},
+       DOI = {10.1007/s00373-020-02223-3},
+       URL = {https://doi.org/10.1007/s00373-020-02223-3},
+}
+		
+@article {MR4163152,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {{$FI$}-modules over preadditive categories and torsion
+              theories},
+   JOURNAL = {J. Pure Appl. Algebra},
+  FJOURNAL = {Journal of Pure and Applied Algebra},
+    VOLUME = {225},
+      YEAR = {2021},
+    NUMBER = {5},
+     PAGES = {106595, 29},
+      ISSN = {0022-4049},
+   MRCLASS = {18E40 (20J05)},
+  MRNUMBER = {4163152},
+       DOI = {10.1016/j.jpaa.2020.106595},
+       URL = {https://doi.org/10.1016/j.jpaa.2020.106595},
+}
+		
+@article {MR4161940,
+    AUTHOR = {Pal, Ritwik},
+     TITLE = {On the signs of {F}ourier coefficients of {H}ilbert cusp
+              forms},
+   JOURNAL = {Ramanujan J.},
+  FJOURNAL = {Ramanujan Journal. An International Journal Devoted to the
+              Areas of Mathematics Influenced by Ramanujan},
+    VOLUME = {53},
+      YEAR = {2020},
+    NUMBER = {2},
+     PAGES = {467--481},
+      ISSN = {1382-4090},
+   MRCLASS = {11F30 (11F41)},
+  MRNUMBER = {4161940},
+       DOI = {10.1007/s11139-019-00206-4},
+       URL = {https://doi.org/10.1007/s11139-019-00206-4},
+}
+		
 @article {MR4157356,
     AUTHOR = {Ray, Anubhab and Roy, Saikat and Bagchi, Satya and Sain,
               Debmalya},
