--- a/_all-courses/um203.md
+++ b/_all-courses/um203.md
@@ -13,7 +13,7 @@ books:
     title: A First Course in Abstract Algebra, 7th edition
     publ: Pearson
 ---
-__Note:__ This course has been replaced by [UM 205](um205.html).
+__Note:__ This course has been replaced by [UM 205]({{ site. baseurl}}/all-courses/um205.html).
 
 Divisibility and Euclid’s algorithm; Fundamental theorem of arithmetic; Infinitude of primes;
 Congruences; (Reduced) residue systems, Application to sums of squares; Chinese Remainder Theorem;
