some more redirects

--- a/_posts/2018-06-11-AIS.md
+++ b/_posts/2018-06-11-AIS.md
@@ -2,6 +2,7 @@
 layout: post
 title: Advanced Instructional School (AIS) on several complex variables for the period June 11 to June 23, 2018
 date: 2018-06-11
+redirect: https://www.atmschools.org/2018/ais/scv/speakers-and-syllabus
 ---
 
 [Visit this page <br>
