--- a/_posts/2018-07-23-IST-PDE.md
+++ b/_posts/2018-07-23-IST-PDE.md
@@ -2,6 +2,7 @@
 layout: post
 title: NCM IST - PDE - Theory and Computation (2018).
 date: 2018-07-23
+redirect: https://www.atmschools.org/2018/ist/pdetc/application-form
 ---
 
 [https://www.atmschools.org/2018/ist/pdetc/application-form](https://www.atmschools.org/2018/ist/pdetc/application-form)
