Update and rename 2021-05-05-r-radha,md to 2021-05-05-r-radha.md

--- a/_seminars/2021/2021-05-05-r-radha.md
+++ b/_seminars/2021/2021-05-05-r-radha.md
@@ -31,7 +31,7 @@ $\phi\in L^2(\mathbb{H}^n)$ is such that
 for all $(k,l)\in\mathbb{Z}^{2n}\setminus\{(0,0)\}$, then $\\{L\_{(2k,l,m)}\phi:k,l\in\mathbb{Z}^n,
 m\in\mathbb{Z}\\}$ is a _Riesz_ sequence if and only if there exist $A,B>0$ such that
 \begin{equation}
-A\leq \sum\_{r\in\mathbb{Z}}\left\|\widehat{\phi}(\lambda+r)\right\|\_{\mathcal{B}_2}^2|\lambda+r|^n\leq
+A\leq \sum\_{r\in\mathbb{Z}}\left\|\widehat{\phi}(\lambda+r)\right\|\_{\mathcal{B}\_2}^2|\lambda+r|^n\leq
 B\ \ a.e.\ \lambda\in(0,1].
 \end{equation}
 Here $\widehat{\phi}$ denotes the group _Fourier_ transform of $\phi$ and $\mathcal{B}\_2$ denotes the
