--- a/_posts/2021-05-16-MSN.md
+++ b/_posts/2021-05-16-MSN.md
@@ -3,4 +3,11 @@ title: Professor M. S. Narasimhan
 date: May 16, 2021  
 ---
 
-The department deeply regrets to announce the passing of Professor M. S. Narasimhan, who was long associated to the department as an NMI Distinguished Associate. We extend our condolences to his family and friends. 
+The department deeply regrets to announce the passing of Professor M. S. Narasimhan, who was long associated to the department as an NMI Distinguished Associate. We extend our condolences to his family and friends. Two memorial meetings, both online, are planned:
+
+4 June at 14:00-15:00 IST, organised by TIFR,
+
+7 June at 16:00-15:30 IST, organised by IISc.
+ 
+The meetings will be conducted on Zoom and also live-streamed on YouTube. 
+Please check back here for further details.
