--- a/_posts/2021-05-16-MSN.md
+++ b/_posts/2021-05-16-MSN.md
@@ -7,5 +7,5 @@ The department deeply regrets to announce the passing of Professor M. S. Narasim
 
 * 4 June at 14:00-15:00 IST, organised by TIFR (https://youtu.be/1eyNjq32_Xg),
 
-* 7 June at 16:00-17:30 IST, organised by IISc (https://youtu.be/WLDl85LcAr0).
+* 7 June at 16:00-17:30 IST, organised by IISc (YouTube link: <a href="https://youtu.be/WLDl85LcAr0">Remembering Prof MS Narasimhan</a>).
  
