--- a/_all-courses/ma383.md
+++ b/_all-courses/ma383.md
@@ -14,7 +14,7 @@ books:
     title: A survey of minimal surfaces
     publ:
   - author: Yi Fang
-    title: Lectures on Minimal Surfaces in $R^n$
+    title: Lectures on Minimal Surfaces in $\R^n$
     publ:
   - author: K. Kenmotsu
     title: Surfaces of constant mean curvature
