--- a/_all-courses/um102.md
+++ b/_all-courses/um102.md
@@ -17,8 +17,8 @@ books:
 ---
 
 Linear Algebra continued: Inner products and Orthogonality; Determinants; Eigenvalues and Eigenvectors;
-Diagonalisation of symmetric matrices. Multivariable calculus: Functions on R^n, partial and total derivatives;
-Chain rule; Maxima, minima and saddles; Lagrange multipliers; Integration in R^n, change of variables,
-Fubini’s theorem; Gradient, Divergence and Curl; Line and Surface integrals in R^2 and R^3; Stokes, Green’s
+Diagonalisation of symmetric matrices. Multivariable calculus: Functions on $\R^n$, partial and total derivatives;
+Chain rule; Maxima, minima and saddles; Lagrange multipliers; Integration in $\R^n$, change of variables,
+Fubini’s theorem; Gradient, Divergence and Curl; Line and Surface integrals in $\R^2$ and $\R^3$; Stokes, Green’s
 and Divergence theorems. Introduction to Ordinary Differential Equations; Linear ODEs and Canonical
 forms for linear transformations.
