--- a/_all-courses/um204.md
+++ b/_all-courses/um204.md
@@ -14,7 +14,7 @@ books:
     publ: Narosa
 ---
 Basic notions from set theory, countable and uncountable sets. Metric spaces: definition and examples,
-basic topological notions. The topology of R^n: topology induced by norms, the Heine-Borel theorem,
+basic topological notions. The topology of $\R^n$: topology induced by norms, the Heine-Borel theorem,
 connected sets. Sequences and series: essential definitions, absolute versus conditional convergence of
 series, some tests of convergence of series. Continuous functions: properties, the sequential and the open-
 set characterizations of continuity, uniform continuity. Differentiation in one variable. The Riemann integral:
