generating latex ofr catalogue

--- a/_all-courses/ma212.md
+++ b/_all-courses/ma212.md
@@ -29,7 +29,7 @@ ug-prereq-courses: UM 203
 1. Basic definitions, examples
 2. Cyclic groups and its subgroups
 3. Homomorphisms, quotient groups, isomorphism theorems
-4. Group actions, Sylow’s theorems, simplicity of A_n for n≥5
+4. Group actions, Sylow’s theorems, simplicity of $A_n$ for $n\geq 5$
 5. Direct and semi-direct products
 6. Solvable and nilpotent groups
 7. Free groups
