--- a/_all-courses/ma213.md
+++ b/_all-courses/ma213.md
@@ -5,7 +5,7 @@ credits: "3:1"
 books:
   - author: Artin, M.  
     title: Algebra
-    publ: Prentice_Hall of India, 1994
+    publ: Prentice Hall of India, 1994
   - author: Dummit, D. S. and Foote, R. M.
     title: Abstract Algebra
     publ: McGraw-Hill, 1986
