--- a/_all-courses/ma219.md
+++ b/_all-courses/ma219.md
@@ -8,7 +8,7 @@ credits: "3:1"
 books:
   - author: Artin, M.  
     title: Algebra
-    publ: Prentice_Hall of India, 1994
+    publ: Prentice Hall of India, 1994
   - author: Halmos, P.
     title: Finite dimensional vector spaces
     publ: Springer-Verlag (UTM), 1987
