--- a/_all-courses/um201.md
+++ b/_all-courses/um201.md
@@ -16,3 +16,5 @@ books:
     title: Probability and Statistics (with Examples using R)
     publ: Unfinished book
 ---
+
+Basic notions of probability, conditional probability and independence, Bayes' theorem, random variables and distributions, expectation and variance, conditional expectation, moment generating functions, limit theorems. Samples and sampling distributions, estimation of parameters, testing of hypotheses, regression, correlation and analysis of variance.
