--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,770 @@
+@article {MR4292221,
+    AUTHOR = {Sain, Debmalya and Bhunia, Pintu and Bhanja, Aniket and Paul,
+              Kallol},
+     TITLE = {On a new norm on {$\Cal B(\Cal H)$} and its applications to
+              numerical radius inequalities},
+   JOURNAL = {Ann. Funct. Anal.},
+  FJOURNAL = {Annals of Functional Analysis},
+    VOLUME = {12},
+      YEAR = {2021},
+    NUMBER = {4},
+     PAGES = {Paper No. 51, 25},
+      ISSN = {2639-7390},
+   MRCLASS = {47A30 (47A12 47A63)},
+  MRNUMBER = {4292221},
+       DOI = {10.1007/s43034-021-00138-5},
+       URL = {https://doi.org/10.1007/s43034-021-00138-5},
+}
+		
+@article {MR4284613,
+    AUTHOR = {Gupta, Subhojoy},
+     TITLE = {Harmonic maps and wild {T}eichm\"{u}ller spaces},
+   JOURNAL = {J. Topol. Anal.},
+  FJOURNAL = {Journal of Topology and Analysis},
+    VOLUME = {13},
+      YEAR = {2021},
+    NUMBER = {2},
+     PAGES = {349--393},
+      ISSN = {1793-5253},
+   MRCLASS = {30F30 (30F60)},
+  MRNUMBER = {4284613},
+       DOI = {10.1142/S1793525320500156},
+       URL = {https://doi.org/10.1142/S1793525320500156},
+}
+		
+@article {MR4282085,
+    AUTHOR = {Basu, Riddhipratim and Ganguly, Shirshendu and Hegde, Milind
+              and Krishnapur, Manjunath},
+     TITLE = {Lower deviations in {$\beta$}-ensembles and law of iterated
+              logarithm in last passage percolation},
+   JOURNAL = {Israel J. Math.},
+  FJOURNAL = {Israel Journal of Mathematics},
+    VOLUME = {242},
+      YEAR = {2021},
+    NUMBER = {1},
+     PAGES = {291--324},
+      ISSN = {0021-2172},
+   MRCLASS = {60K35 (60B20 60F15)},
+  MRNUMBER = {4282085},
+       DOI = {10.1007/s11856-021-2135-z},
+       URL = {https://doi.org/10.1007/s11856-021-2135-z},
+}
+		
+@article {MR4281343,
+    AUTHOR = {Khurana, Divya and Sain, Debmalya},
+     TITLE = {Norm derivatives and geometry of bilinear operators},
+   JOURNAL = {Ann. Funct. Anal.},
+  FJOURNAL = {Annals of Functional Analysis},
+    VOLUME = {12},
+      YEAR = {2021},
+    NUMBER = {3},
+     PAGES = {Paper No. 49, 19},
+      ISSN = {2639-7390},
+   MRCLASS = {46B20 (46G25)},
+  MRNUMBER = {4281343},
+       DOI = {10.1007/s43034-021-00134-9},
+       URL = {https://doi.org/10.1007/s43034-021-00134-9},
+}
+		
+@article {MR4280273,
+    AUTHOR = {Basak, Riju and Garg, Rahul and Thangavelu, Sundaram},
+     TITLE = {Homogeneous {F}ourier and {W}eyl multipliers on {S}obolev
+              spaces related to the {H}eisenberg group},
+   JOURNAL = {J. Funct. Anal.},
+  FJOURNAL = {Journal of Functional Analysis},
+    VOLUME = {281},
+      YEAR = {2021},
+    NUMBER = {8},
+     PAGES = {Paper No. 109154, 45},
+      ISSN = {0022-1236},
+   MRCLASS = {43A22 (42B15 42B35 43A80 46E36)},
+  MRNUMBER = {4280273},
+       DOI = {10.1016/j.jfa.2021.109154},
+       URL = {https://doi.org/10.1016/j.jfa.2021.109154},
+}
+		
+@article {MR4279276,
+    AUTHOR = {Arunkumar, G.},
+     TITLE = {Chromatic symmetric function of graphs from {B}orcherds
+              algebras},
+   JOURNAL = {J. Combin. Theory Ser. A},
+  FJOURNAL = {Journal of Combinatorial Theory. Series A},
+    VOLUME = {183},
+      YEAR = {2021},
+     PAGES = {Paper No. 105492, 28},
+      ISSN = {0097-3165},
+   MRCLASS = {05E05 (05E16 17B67)},
+  MRNUMBER = {4279276},
+       DOI = {10.1016/j.jcta.2021.105492},
+       URL = {https://doi.org/10.1016/j.jcta.2021.105492},
+}
+		
+@article {MR4278694,
+    AUTHOR = {Datar, Ved and Jacob, Adam and Zhang, Yuguang},
+     TITLE = {Adiabatic limits of anti-self-dual connections on collapsed
+              {$K3$} surfaces},
+   JOURNAL = {J. Differential Geom.},
+  FJOURNAL = {Journal of Differential Geometry},
+    VOLUME = {118},
+      YEAR = {2021},
+    NUMBER = {2},
+     PAGES = {223--296},
+      ISSN = {0022-040X},
+   MRCLASS = {53C07 (14J28 32J15 53C55)},
+  MRNUMBER = {4278694},
+       DOI = {10.4310/jdg/1622743140},
+       URL = {https://doi.org/10.4310/jdg/1622743140},
+}
+		
+@article {MR4278683,
+    AUTHOR = {Dias, Kealey and Gupta, Subhojoy and Trnkova, Maria},
+     TITLE = {Quadratic differentials, measured foliations, and metric
+              graphs on punctured surfaces},
+   JOURNAL = {Illinois J. Math.},
+  FJOURNAL = {Illinois Journal of Mathematics},
+    VOLUME = {65},
+      YEAR = {2021},
+    NUMBER = {2},
+     PAGES = {417--454},
+      ISSN = {0019-2082},
+   MRCLASS = {30F60 (57R30)},
+  MRNUMBER = {4278683},
+       DOI = {10.1215/00192082-8827639},
+       URL = {https://doi.org/10.1215/00192082-8827639},
+}
+		
+@article {MR4277763,
+    AUTHOR = {Chattopadhyay, Arup and Sarkar, Jaydeb and Sarkar, Srijan},
+     TITLE = {Multiplicities, invariant subspaces and an additive formula},
+   JOURNAL = {Proc. Edinb. Math. Soc. (2)},
+  FJOURNAL = {Proceedings of the Edinburgh Mathematical Society. Series II},
+    VOLUME = {64},
+      YEAR = {2021},
+    NUMBER = {2},
+     PAGES = {279--297},
+      ISSN = {0013-0915},
+   MRCLASS = {47A13 (32Axx 46C99 47A15 47A16 47A80 47B37 47B38)},
+  MRNUMBER = {4277763},
+       DOI = {10.1017/S0013091521000146},
+       URL = {https://doi.org/10.1017/S0013091521000146},
+}
+		
+@article {MR4277103,
+    AUTHOR = {Biswas, Anindya and Maitra, Anwoy},
+     TITLE = {A characterization of the bidisc by a subgroup of its
+              automorphism group},
+   JOURNAL = {J. Math. Anal. Appl.},
+  FJOURNAL = {Journal of Mathematical Analysis and Applications},
+    VOLUME = {504},
+      YEAR = {2021},
+    NUMBER = {2},
+     PAGES = {Paper No. 125434, 10},
+      ISSN = {0022-247X},
+   MRCLASS = {32M05},
+  MRNUMBER = {4277103},
+       DOI = {10.1016/j.jmaa.2021.125434},
+       URL = {https://doi.org/10.1016/j.jmaa.2021.125434},
+}
+		
+@article {MR4274703,
+    AUTHOR = {Chmieli\'{n}ski, Jacek and Khurana, Divya and Sain, Debmalya},
+     TITLE = {Local approximate symmetry of {B}irkhoff-{J}ames orthogonality
+              in normed linear spaces},
+   JOURNAL = {Results Math.},
+  FJOURNAL = {Results in Mathematics},
+    VOLUME = {76},
+      YEAR = {2021},
+    NUMBER = {3},
+     PAGES = {Paper No. 136, 26},
+      ISSN = {1422-6383},
+   MRCLASS = {46B20 (47L05 52A21)},
+  MRNUMBER = {4274703},
+       DOI = {10.1007/s00025-021-01437-y},
+       URL = {https://doi.org/10.1007/s00025-021-01437-y},
+}
+		
+@article {MR4273157,
+    AUTHOR = {Datar, Ved and Seshadri, Harish and Song, Jian},
+     TITLE = {Metric rigidity of {K}\"{a}hler manifolds with lower {R}icci
+              bounds and almost maximal volume},
+   JOURNAL = {Proc. Amer. Math. Soc.},
+  FJOURNAL = {Proceedings of the American Mathematical Society},
+    VOLUME = {149},
+      YEAR = {2021},
+    NUMBER = {8},
+     PAGES = {3569--3574},
+      ISSN = {0002-9939},
+   MRCLASS = {53C24 (53C55)},
+  MRNUMBER = {4273157},
+       DOI = {10.1090/proc/15473},
+       URL = {https://doi.org/10.1090/proc/15473},
+}
+		
+@article {MR4268340,
+    AUTHOR = {Sain, Debmalya},
+     TITLE = {Orthogonality and smoothness induced by the norm derivatives},
+   JOURNAL = {Rev. R. Acad. Cienc. Exactas F\'{\i}s. Nat. Ser. A Mat. RACSAM},
+  FJOURNAL = {Revista de la Real Academia de Ciencias Exactas, F\'{\i}sicas y
+              Naturales. Serie A. Matematicas. RACSAM},
+    VOLUME = {115},
+      YEAR = {2021},
+    NUMBER = {3},
+     PAGES = {Paper No. 120, 10},
+      ISSN = {1578-7303},
+   MRCLASS = {46B20 (46C50 47L05)},
+  MRNUMBER = {4268340},
+       DOI = {10.1007/s13398-021-01060-0},
+       URL = {https://doi.org/10.1007/s13398-021-01060-0},
+}
+		
+@article {MR4267614,
+    AUTHOR = {Banerjee, Agnid and Garofalo, Nicola and Manna, Ramesh},
+     TITLE = {A strong unique continuation property for the heat operator
+              with {H}ardy type potential},
+   JOURNAL = {J. Geom. Anal.},
+  FJOURNAL = {Journal of Geometric Analysis},
+    VOLUME = {31},
+      YEAR = {2021},
+    NUMBER = {6},
+     PAGES = {5480--5504},
+      ISSN = {1050-6926},
+   MRCLASS = {35A02 (35B60 35K05)},
+  MRNUMBER = {4267614},
+       DOI = {10.1007/s12220-020-00487-y},
+       URL = {https://doi.org/10.1007/s12220-020-00487-y},
+}
+		
+@article {MR4267517,
+    AUTHOR = {Ganguly, Pritam and Thangavelu, Sundaram},
+     TITLE = {Theorems of {C}hernoff and {I}ngham for certain eigenfunction
+              expansions},
+   JOURNAL = {Adv. Math.},
+  FJOURNAL = {Advances in Mathematics},
+    VOLUME = {386},
+      YEAR = {2021},
+     PAGES = {Paper No. 107815, 31},
+      ISSN = {0001-8708},
+   MRCLASS = {43A85 (33C45 35P10 42C05)},
+  MRNUMBER = {4267517},
+       DOI = {10.1016/j.aim.2021.107815},
+       URL = {https://doi.org/10.1016/j.aim.2021.107815},
+}
+		
+@article {MR4266152,
+    AUTHOR = {Bhattacharyya, Tirthankar and Das, B. Krishna and Sau,
+              Haripada},
+     TITLE = {Toeplitz operators on the symmetrized bidisc},
+   JOURNAL = {Int. Math. Res. Not. IMRN},
+  FJOURNAL = {International Mathematics Research Notices. IMRN},
+      YEAR = {2021},
+    NUMBER = {11},
+     PAGES = {8492--8520},
+      ISSN = {1073-7928},
+   MRCLASS = {32M15 (32A70 47B35)},
+  MRNUMBER = {4266152},
+       DOI = {10.1093/imrn/rnz333},
+       URL = {https://doi.org/10.1093/imrn/rnz333},
+}
+		
+@article {MR4265349,
+    AUTHOR = {Lai, King-Fai and Longhi, Ignazio and Suzuki, Takashi and Tan,
+              Ki-Seng and Trihan, Fabien},
+     TITLE = {On the {$\mu$}-invariants of abelian varieties over function
+              fields of positive characteristic},
+   JOURNAL = {Algebra Number Theory},
+  FJOURNAL = {Algebra \& Number Theory},
+    VOLUME = {15},
+      YEAR = {2021},
+    NUMBER = {4},
+     PAGES = {863--907},
+      ISSN = {1937-0652},
+   MRCLASS = {11R23 (11G10 14J27)},
+  MRNUMBER = {4265349},
+       DOI = {10.2140/ant.2021.15.863},
+       URL = {https://doi.org/10.2140/ant.2021.15.863},
+}
+		
+@article {MR4263010,
+    AUTHOR = {Sen, Jeet and Sain, Debmalya and Paul, Kallol},
+     TITLE = {On approximate orthogonality and symmetry of operators in
+              semi-{H}ilbertian structure},
+   JOURNAL = {Bull. Sci. Math.},
+  FJOURNAL = {Bulletin des Sciences Math\'{e}matiques},
+    VOLUME = {170},
+      YEAR = {2021},
+     PAGES = {Paper No. 102997, 22},
+      ISSN = {0007-4497},
+   MRCLASS = {46B20 (46C50 47L05)},
+  MRNUMBER = {4263010},
+       DOI = {10.1016/j.bulsci.2021.102997},
+       URL = {https://doi.org/10.1016/j.bulsci.2021.102997},
+}
+		
+@article {MR4261272,
+    AUTHOR = {Pradhan, Somnath},
+     TITLE = {Risk-sensitive ergodic control of reflected diffusion
+              processes in orthant},
+   JOURNAL = {Appl. Math. Optim.},
+  FJOURNAL = {Applied Mathematics and Optimization},
+    VOLUME = {83},
+      YEAR = {2021},
+    NUMBER = {3},
+     PAGES = {1739--1764},
+      ISSN = {0095-4616},
+   MRCLASS = {93E20 (49L12 60J70)},
+  MRNUMBER = {4261272},
+       DOI = {10.1007/s00245-019-09606-w},
+       URL = {https://doi.org/10.1007/s00245-019-09606-w},
+}
+		
+@article {MR4256181,
+    AUTHOR = {Nandakumaran, A. K. and Sufian, Abu},
+     TITLE = {Strong contrasting diffusivity in general oscillating domains:
+              homogenization of optimal control problems},
+   JOURNAL = {J. Differential Equations},
+  FJOURNAL = {Journal of Differential Equations},
+    VOLUME = {291},
+      YEAR = {2021},
+     PAGES = {57--89},
+      ISSN = {0022-0396},
+   MRCLASS = {35B27 (35B40 49J20 49J45 74Q10 80M40)},
+  MRNUMBER = {4256181},
+       DOI = {10.1016/j.jde.2021.04.031},
+       URL = {https://doi.org/10.1016/j.jde.2021.04.031},
+}
+		
+@article {MR4254630,
+    AUTHOR = {Kreuzer, Martin and Patil, Dilip P.},
+     TITLE = {Computational aspects of {B}urnside rings part {II}: important
+              maps},
+   JOURNAL = {Beitr. Algebra Geom.},
+  FJOURNAL = {Beitr\"{a}ge zur Algebra und Geometrie. Contributions to Algebra
+              and Geometry},
+    VOLUME = {62},
+      YEAR = {2021},
+    NUMBER = {2},
+     PAGES = {475--494},
+      ISSN = {0138-4821},
+   MRCLASS = {19A22 (13F99 13P99 20-08 20C05)},
+  MRNUMBER = {4254630},
+       DOI = {10.1007/s13366-020-00520-9},
+       URL = {https://doi.org/10.1007/s13366-020-00520-9},
+}
+		
+@article {MR4244063,
+    AUTHOR = {Poria, Anirudha},
+     TITLE = {Uncertainty principles for the {O}pdam-{C}herednik transform
+              on modulation spaces},
+   JOURNAL = {Integral Transforms Spec. Funct.},
+  FJOURNAL = {Integral Transforms and Special Functions. An International
+              Journal},
+    VOLUME = {32},
+      YEAR = {2021},
+    NUMBER = {3},
+     PAGES = {191--206},
+      ISSN = {1065-2469},
+   MRCLASS = {44A15 (33C45 42B35 43A32)},
+  MRNUMBER = {4244063},
+       DOI = {10.1080/10652469.2020.1813129},
+       URL = {https://doi.org/10.1080/10652469.2020.1813129},
+}
+		
+@article {MR4243295,
+    AUTHOR = {Deb, Prahllad},
+     TITLE = {On unitary invariants of quotient {H}ilbert modules along
+              smooth complex analytic sets},
+   JOURNAL = {Bull. Sci. Math.},
+  FJOURNAL = {Bulletin des Sciences Math\'{e}matiques},
+    VOLUME = {169},
+      YEAR = {2021},
+     PAGES = {Paper No. 102977, 42},
+      ISSN = {0007-4497},
+   MRCLASS = {32A60 (32C99 32Q35 46E22 47B32 53C07)},
+  MRNUMBER = {4243295},
+       DOI = {10.1016/j.bulsci.2021.102977},
+       URL = {https://doi.org/10.1016/j.bulsci.2021.102977},
+}
+		
+@article {MR4242540,
+    AUTHOR = {Balodi, Mamta and Banerjee, Abhishek and Ray, Samarpita},
+     TITLE = {Entwined modules over linear categories and {G}alois
+              extensions},
+   JOURNAL = {Israel J. Math.},
+  FJOURNAL = {Israel Journal of Mathematics},
+    VOLUME = {241},
+      YEAR = {2021},
+    NUMBER = {2},
+     PAGES = {623--692},
+      ISSN = {0021-2172},
+   MRCLASS = {16T15 (16T05 18E50)},
+  MRNUMBER = {4242540},
+       DOI = {10.1007/s11856-021-2108-2},
+       URL = {https://doi.org/10.1007/s11856-021-2108-2},
+}
+		
+@article {MR4240612,
+    AUTHOR = {Bera, Sudip},
+     TITLE = {Enumeration of weighted paths on a digraph and block hook
+              determinant},
+   JOURNAL = {Spec. Matrices},
+  FJOURNAL = {Special Matrices},
+    VOLUME = {9},
+      YEAR = {2021},
+     PAGES = {197--211},
+   MRCLASS = {05A10 (05A05 05C30 05C38)},
+  MRNUMBER = {4240612},
+       DOI = {10.1515/spma-2020-0130},
+       URL = {https://doi.org/10.1515/spma-2020-0130},
+}
+		
+@article {MR4238276,
+    AUTHOR = {\'{A}lvarez-C\'{o}nsul, Luis and Garcia-Fernandez, Mario and
+              Garc\'{\i}a-Prada, Oscar and Pingali, Vamsi Pritham},
+     TITLE = {Gravitating vortices and the {E}instein-{B}ogomol'nyi
+              equations},
+   JOURNAL = {Math. Ann.},
+  FJOURNAL = {Mathematische Annalen},
+    VOLUME = {379},
+      YEAR = {2021},
+    NUMBER = {3-4},
+     PAGES = {1651--1684},
+      ISSN = {0025-5831},
+   MRCLASS = {53C07 (83E30)},
+  MRNUMBER = {4238276},
+       DOI = {10.1007/s00208-020-01964-z},
+       URL = {https://doi.org/10.1007/s00208-020-01964-z},
+}
+		
+@article {MR4238082,
+    AUTHOR = {Behera, Kiran Kumar},
+     TITLE = {A generalized inverse eigenvalue problem and {$m$}-functions},
+   JOURNAL = {Linear Algebra Appl.},
+  FJOURNAL = {Linear Algebra and its Applications},
+    VOLUME = {622},
+      YEAR = {2021},
+     PAGES = {46--65},
+      ISSN = {0024-3795},
+   MRCLASS = {15A29 (15A18 15A22 30C10)},
+  MRNUMBER = {4238082},
+       DOI = {10.1016/j.laa.2021.03.025},
+       URL = {https://doi.org/10.1016/j.laa.2021.03.025},
+}
+		
+@article {MR4232687,
+    AUTHOR = {Hatui, Sumana and Singla, Pooja},
+     TITLE = {On {S}chur multiplier and projective representations of
+              {H}eisenberg groups},
+   JOURNAL = {J. Pure Appl. Algebra},
+  FJOURNAL = {Journal of Pure and Applied Algebra},
+    VOLUME = {225},
+      YEAR = {2021},
+    NUMBER = {11},
+     PAGES = {Paper No. 106742, 16},
+      ISSN = {0022-4049},
+   MRCLASS = {20C25 (20F18 20G05)},
+  MRNUMBER = {4232687},
+       DOI = {10.1016/j.jpaa.2021.106742},
+       URL = {https://doi.org/10.1016/j.jpaa.2021.106742},
+}
+		
+@article {MR4232545,
+    AUTHOR = {Gupta, Subhojoy and Mj, Mahan},
+     TITLE = {Meromorphic projective structures, grafting and the monodromy
+              map},
+   JOURNAL = {Adv. Math.},
+  FJOURNAL = {Advances in Mathematics},
+    VOLUME = {383},
+      YEAR = {2021},
+     PAGES = {Paper No. 107673, 49},
+      ISSN = {0001-8708},
+   MRCLASS = {30F60 (57K20)},
+  MRNUMBER = {4232545},
+       DOI = {10.1016/j.aim.2021.107673},
+       URL = {https://doi.org/10.1016/j.aim.2021.107673},
+}
+		
+@article {MR4232510,
+    AUTHOR = {Ghosh, Mrinal K. and Suresh Kumar, K. and Pal, Chandan and
+              Pradhan, Somnath},
+     TITLE = {Nonzero-sum risk-sensitive stochastic differential games with
+              discounted costs},
+   JOURNAL = {Stoch. Anal. Appl.},
+  FJOURNAL = {Stochastic Analysis and Applications},
+    VOLUME = {39},
+      YEAR = {2021},
+    NUMBER = {2},
+     PAGES = {306--326},
+      ISSN = {0736-2994},
+   MRCLASS = {91A15 (49J55 49L12 49N70 91A23)},
+  MRNUMBER = {4232510},
+       DOI = {10.1080/07362994.2020.1796707},
+       URL = {https://doi.org/10.1080/07362994.2020.1796707},
+}
+		
+@article {MR4229368,
+    AUTHOR = {Sain, Debmalya and Paul, Kallol and Mal, Arpita},
+     TITLE = {On extreme contractions between real {B}anach spaces},
+   JOURNAL = {Expo. Math.},
+  FJOURNAL = {Expositiones Mathematicae},
+    VOLUME = {39},
+      YEAR = {2021},
+    NUMBER = {1},
+     PAGES = {33--47},
+      ISSN = {0723-0869},
+   MRCLASS = {46B20 (47L05)},
+  MRNUMBER = {4229368},
+       DOI = {10.1016/j.exmath.2019.09.004},
+       URL = {https://doi.org/10.1016/j.exmath.2019.09.004},
+}
+		
+@article {MR4222166,
+    AUTHOR = {Nandakumaran, A. K. and Sufian, Abu},
+     TITLE = {Oscillating {PDE} in a rough domain with a curved interface:
+              homogenization of an optimal control problem},
+   JOURNAL = {ESAIM Control Optim. Calc. Var.},
+  FJOURNAL = {ESAIM. Control, Optimisation and Calculus of Variations},
+    VOLUME = {27},
+      YEAR = {2021},
+    NUMBER = {suppl.},
+     PAGES = {Paper No. S4, 37},
+      ISSN = {1292-8119},
+   MRCLASS = {49J45 (35B27 49J20 80M35)},
+  MRNUMBER = {4222166},
+       DOI = {10.1051/cocv/2020045},
+       URL = {https://doi.org/10.1051/cocv/2020045},
+}
+		
+@article {MR4221643,
+    AUTHOR = {Bera, Sudip and Dey, Hiranya Kishore and Mukherjee, Sajal
+              Kumar},
+     TITLE = {On the connectivity of enhanced power graphs of finite groups},
+   JOURNAL = {Graphs Combin.},
+  FJOURNAL = {Graphs and Combinatorics},
+    VOLUME = {37},
+      YEAR = {2021},
+    NUMBER = {2},
+     PAGES = {591--603},
+      ISSN = {0911-0119},
+   MRCLASS = {05C25 (05C40)},
+  MRNUMBER = {4221643},
+       DOI = {10.1007/s00373-020-02267-5},
+       URL = {https://doi.org/10.1007/s00373-020-02267-5},
+}
+		
+@article {MR4221342,
+    AUTHOR = {Anoop, V. P. and Parui, Sanjay},
+     TITLE = {Improved fractional {H}ardy inequalities for {D}unkl gradient},
+   JOURNAL = {Math. Inequal. Appl.},
+  FJOURNAL = {Mathematical Inequalities \& Applications},
+    VOLUME = {24},
+      YEAR = {2021},
+    NUMBER = {1},
+     PAGES = {129--155},
+      ISSN = {1331-4343},
+   MRCLASS = {42B35 (26D10 42B37 46E35)},
+  MRNUMBER = {4221342},
+       DOI = {10.7153/mia-2021-24-10},
+       URL = {https://doi.org/10.7153/mia-2021-24-10},
+}
+		
+@article {MR4220665,
+    AUTHOR = {Choudhury, Projesh Nath and Sivakumar, K. C.},
+     TITLE = {Matrices with positive semidefinite real part},
+   JOURNAL = {Linear Multilinear Algebra},
+  FJOURNAL = {Linear and Multilinear Algebra},
+    VOLUME = {69},
+      YEAR = {2021},
+    NUMBER = {3},
+     PAGES = {448--470},
+      ISSN = {0308-1087},
+   MRCLASS = {15B48 (15A09 15A39 15B57)},
+  MRNUMBER = {4220665},
+       DOI = {10.1080/03081087.2019.1602588},
+       URL = {https://doi.org/10.1080/03081087.2019.1602588},
+}
+		
+@article {MR4213738,
+    AUTHOR = {Pingali, Vamsi Pritham and Varolin, Dror},
+     TITLE = {Nonuniformly flat affine algebraic hypersurfaces},
+   JOURNAL = {Nagoya Math. J.},
+  FJOURNAL = {Nagoya Mathematical Journal},
+    VOLUME = {241},
+      YEAR = {2021},
+     PAGES = {1--43},
+      ISSN = {0027-7630},
+   MRCLASS = {32A36 (32E30 32U05 32W50)},
+  MRNUMBER = {4213738},
+       DOI = {10.1017/nmj.2019.2},
+       URL = {https://doi.org/10.1017/nmj.2019.2},
+}
+		
+@article {MR4212977,
+    AUTHOR = {Datta, Basudeb and Gupta, Subhojoy},
+     TITLE = {Semi-regular tilings of the hyperbolic plane},
+   JOURNAL = {Discrete Comput. Geom.},
+  FJOURNAL = {Discrete \& Computational Geometry. An International Journal
+              of Mathematics and Computer Science},
+    VOLUME = {65},
+      YEAR = {2021},
+    NUMBER = {2},
+     PAGES = {531--553},
+      ISSN = {0179-5376},
+   MRCLASS = {52C20 (51M09)},
+  MRNUMBER = {4212977},
+       DOI = {10.1007/s00454-019-00156-0},
+       URL = {https://doi.org/10.1007/s00454-019-00156-0},
+}
+		
+@article {MR4209016,
+    AUTHOR = {Choudhury, Projesh Nath and Kannan, M. Rajesh},
+     TITLE = {Interval hulls of {$N$}-matrices and almost {$P$}-matrices},
+   JOURNAL = {Linear Algebra Appl.},
+  FJOURNAL = {Linear Algebra and its Applications},
+    VOLUME = {617},
+      YEAR = {2021},
+     PAGES = {27--38},
+      ISSN = {0024-3795},
+   MRCLASS = {15B48 (65G30)},
+  MRNUMBER = {4209016},
+       DOI = {10.1016/j.laa.2021.01.005},
+       URL = {https://doi.org/10.1016/j.laa.2021.01.005},
+}
+		
+@article {MR4208920,
+    AUTHOR = {Sebastian, Geethika and Daniel, Sukumar},
+     TITLE = {A weaker {G}leason-{K}ahane-\.{Z}elazko theorem for modules and
+              applications to {H}ardy spaces},
+   JOURNAL = {Colloq. Math.},
+  FJOURNAL = {Colloquium Mathematicum},
+    VOLUME = {164},
+      YEAR = {2021},
+    NUMBER = {2},
+     PAGES = {273--282},
+      ISSN = {0010-1354},
+   MRCLASS = {46H05 (30H10 46H25)},
+  MRNUMBER = {4208920},
+MRREVIEWER = {Mart Abel},
+       DOI = {10.4064/cm8015-9-2019},
+       URL = {https://doi.org/10.4064/cm8015-9-2019},
+}
+		
+@article {MR4206799,
+    AUTHOR = {Khare, Apoorva and Pingali, Vamsi Pritham},
+     TITLE = {On an asymptotic characterisation of {G}riffiths
+              semipositivity},
+   JOURNAL = {Bull. Sci. Math.},
+  FJOURNAL = {Bulletin des Sciences Math\'{e}matiques},
+    VOLUME = {167},
+      YEAR = {2021},
+     PAGES = {Paper No. 102956, 7},
+      ISSN = {0007-4497},
+   MRCLASS = {32L10},
+  MRNUMBER = {4206799},
+MRREVIEWER = {Alfonso Zamora},
+       DOI = {10.1016/j.bulsci.2021.102956},
+       URL = {https://doi.org/10.1016/j.bulsci.2021.102956},
+}
+		
+@article {MR4206545,
+    AUTHOR = {Balodi, Mamta and Banerjee, Abhishek and Naolekar, Anita},
+     TITLE = {B{V}-operators and the secondary {H}ochschild complex},
+   JOURNAL = {C. R. Math. Acad. Sci. Paris},
+  FJOURNAL = {Comptes Rendus Math\'{e}matique. Acad\'{e}mie des Sciences. Paris},
+    VOLUME = {358},
+      YEAR = {2020},
+    NUMBER = {11-12},
+     PAGES = {1239--1258},
+      ISSN = {1631-073X},
+   MRCLASS = {16E40},
+  MRNUMBER = {4206545},
+       DOI = {10.5802/crmath.157},
+       URL = {https://doi.org/10.5802/crmath.157},
+}
+		
+@article {MR4206131,
+    AUTHOR = {Adhikari, Saswata and Anoop, V. P. and Parui, Sanjay},
+     TITLE = {Existence of extremals of {D}unkl-type {S}obolev inequality
+              and of {S}tein-{W}eiss inequality for {D}unkl {R}iesz
+              potential},
+   JOURNAL = {Complex Anal. Oper. Theory},
+  FJOURNAL = {Complex Analysis and Operator Theory},
+    VOLUME = {15},
+      YEAR = {2021},
+    NUMBER = {2},
+     PAGES = {Paper No. 28, 34},
+      ISSN = {1661-8254},
+   MRCLASS = {42B10 (33C52 35A23 35R11)},
+  MRNUMBER = {4206131},
+       DOI = {10.1007/s11785-020-01068-1},
+       URL = {https://doi.org/10.1007/s11785-020-01068-1},
+}
+		
+@article {MR4205055,
+    AUTHOR = {Carstensen, Carsten and Mallik, Gouranga and Nataraj, Neela},
+     TITLE = {Nonconforming finite element discretization for semilinear
+              problems with trilinear nonlinearity},
+   JOURNAL = {IMA J. Numer. Anal.},
+  FJOURNAL = {IMA Journal of Numerical Analysis},
+    VOLUME = {41},
+      YEAR = {2021},
+    NUMBER = {1},
+     PAGES = {164--205},
+      ISSN = {0272-4979},
+   MRCLASS = {65N30 (65N12 65N15 65N50)},
+  MRNUMBER = {4205055},
+       DOI = {10.1093/imanum/drz071},
+       URL = {https://doi.org/10.1093/imanum/drz071},
+}
+		
+@article {MR4199635,
+    AUTHOR = {Sain, Debmalya and Mal, Arpita and Bhunia, Pintu and Paul,
+              Kallol},
+     TITLE = {On numerical radius and {C}rawford number attainment sets of a
+              bounded linear operator},
+   JOURNAL = {J. Convex Anal.},
+  FJOURNAL = {Journal of Convex Analysis},
+    VOLUME = {28},
+      YEAR = {2021},
+    NUMBER = {1},
+     PAGES = {67--80},
+      ISSN = {0944-6532},
+   MRCLASS = {47A12 (46B20)},
+  MRNUMBER = {4199635},
+MRREVIEWER = {Yue-Qing Wang},
+}
+		
+@article {MR4198701,
+    AUTHOR = {Roy, Saikat and Senapati, Tanusri and Sain, Debmalya},
+     TITLE = {Orthogonality of bilinear forms and application to matrices},
+   JOURNAL = {Linear Algebra Appl.},
+  FJOURNAL = {Linear Algebra and its Applications},
+    VOLUME = {615},
+      YEAR = {2021},
+     PAGES = {104--111},
+      ISSN = {0024-3795},
+   MRCLASS = {46B20 (15A63 46A32 46E40)},
+  MRNUMBER = {4198701},
+       DOI = {10.1016/j.laa.2020.12.032},
+       URL = {https://doi.org/10.1016/j.laa.2020.12.032},
+}
+		
+@article {MR4195999,
+    AUTHOR = {Sain, Debmalya},
+     TITLE = {On a generalization of a complementary triangle inequality in
+              {H}ilbert spaces and {B}anach spaces},
+   JOURNAL = {Indian J. Pure Appl. Math.},
+  FJOURNAL = {Indian Journal of Pure and Applied Mathematics},
+    VOLUME = {51},
+      YEAR = {2020},
+    NUMBER = {4},
+     PAGES = {1815--1827},
+      ISSN = {0019-5588},
+   MRCLASS = {46C15 (46B20)},
+  MRNUMBER = {4195999},
+       DOI = {10.1007/s13226-020-0498-1},
+       URL = {https://doi.org/10.1007/s13226-020-0498-1},
+}
+		
 @article {MR4192234,
     AUTHOR = {Choudhury, Projesh Nath and Eagambaram, N. and Sivakumar, K.
               C. and Sushmitha, P.},
