--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -2833,7 +2833,31 @@ MRREVIEWER = {Francesca Arici},
   MRNUMBER = {3940662},
 }
 		
-@article {MR3939356,
+@article {MR3940604,
+    AUTHOR = {Khare, Apoorva},
+     TITLE = {Generalized nil-{C}oxeter algebras},
+   JOURNAL = {S\'{e}m. Lothar. Combin.},
+  FJOURNAL = {S\'{e}minaire Lotharingien de Combinatoire},
+    VOLUME = {80B},
+      YEAR = {2018},
+     PAGES = {Art. 29, 12},
+   MRCLASS = {20F55 (16S99 17B37 20C08)},
+  MRNUMBER = {3940604},
+MRREVIEWER = {G\"{o}tz Pfeiffer},
+}
+		
+@article {MR3940589,
+    AUTHOR = {Khare, Apoorva and Tao, Terence},
+     TITLE = {Schur polynomials, entrywise positivity preservers, and weak
+              majorization},
+   JOURNAL = {S\'{e}m. Lothar. Combin.},
+  FJOURNAL = {S\'{e}minaire Lotharingien de Combinatoire},
+    VOLUME = {80B},
+      YEAR = {2018},
+     PAGES = {Art. 14, 12},
+   MRCLASS = {05E05},
+  MRNUMBER = {3940589},
+}@article {MR3939356,
     AUTHOR = {Kataria, Kuldeep Kumar and Vellaisamy, Palaniappan},
      TITLE = {On the convolution of {M}ittag-{L}effler distributions and its
               applications to fractional point processes},
