--- a/_events/2021-09-16-IIScIISERP2020.md
+++ b/_events/2021-09-16-IIScIISERP2020.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  IISc-IISERP Joint Math 20-20 Symposium, 2021.
+title:  IISc-IISERP Joint Math 20-20 Symposium, 2021
 date: 2021-09-16
 redirect: https://sites.google.com/view/wmp-2021/home?authuser=0
 ---
