--- a/_events/2022-07-18-FPSAC2022.md
+++ b/_events/2022-07-18-FPSAC2022.md
@@ -4,4 +4,4 @@ title:  IISc-IISERP Joint Math 20-20 Symposium, 2021
 date: 2022-07-18
 pinned: true
 ---
-The $33^{rd}$ International Conference on Formal Power Series & Algebraic Combinatorics will be held at the Department of Mathematics, IISc during July 18–22, 2022. For details please visit the [conference website]({{ site.baseurl }}/fpsac2022/).
+The $33^{rd}$ International Conference on Formal Power Series & Algebraic Combinatorics will be held at the Department of Mathematics, IISc during July 18–22, 2022. For details please visit the [conference website]({{ site.baseurl }}/fpsac2022/index.html).
