--- a/fpsac2022/assets/submissions/FPSAC2022.cls
+++ b/fpsac2022/assets/submissions/FPSAC2022.cls
@@ -333,7 +333,7 @@
 \crefname{cor}{Corollary}{Corollaries}
 \crefname{corollary}{Corollary}{Corollaries}
 \crefname{conjecture}{Conjecture}{Conjectures}
-\crefname{conj}{Conjeture}{Conjectures}
+\crefname{conj}{Conjecture}{Conjectures}
 \crefname{ex}{Example}{Examples}
 
 
